Fixed a clearfix:after bug that made a weird margin on the bottom of the page. \0020 = better than a dot. Overflow fixes the margin that occures on top of the page because of the new content.

--- a/css/screen.css
+++ b/css/screen.css
@@ -223,7 +223,7 @@ div.colborder {padding-right:24px;margin-right:25px;border-right:1px solid #eee;
 .push-1, .push-2, .push-3, .push-4, .push-5, .push-6, .push-7, .push-8, .push-9, .push-10, .push-11, .push-12, .push-13, .push-14, .push-15, .push-16, .push-17, .push-18, .push-19, .push-20, .push-21, .push-22, .push-23, .push-24 {float:right;position:relative;}
 hr {background:#ddd;color:#ddd;clear:both;float:none;width:100%;height:.1em;margin:0 0 1.45em;border:none;}
 hr.space {background:#fff;color:#fff;}
-.clearfix:after, .container:after {content:".";display:block;height:0;clear:both;visibility:hidden;max-height:0;}
+.clearfix:after, .container:after {content:"\0020";display:block;height:0;clear:both;visibility:hidden;max-height:0;overflow:hidden;}
 .clearfix, .container {display:inline-block;}
 * html .clearfix, * html .container {height:1%;}
 .clearfix, .container {display:block;}
